--- a/appagar/tsconfig.json
+++ b/appagar/tsconfig.json
@@ -26,7 +26,9 @@
       "@/*": [
         "./src/*"
       ]
-    }
+    },
+    "types": ["node", "react", "react-dom"],
+    "forceConsistentCasingInFileNames": true
   },
   "include": [
     "next-env.d.ts",
