--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/supabase-js": "^2.45.4",
     "@tanstack/react-query": "^5.59.19",
     "next": "14.2.10",
+    "postgres": "^3.4.7",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
