--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,9 +17,6 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./appagar
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -29,7 +26,6 @@ jobs:
         with:
           node-version: "20"
           cache: "npm"
-          cache-dependency-path: ./appagar/package-lock.json
 
       - name: Install dependencies
         run: npm ci
@@ -46,7 +42,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./appagar/out
+          path: ./out
 
   deploy:
     environment:
