--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "file:vendor/auth-helpers-nextjs",
     "@supabase/supabase-js": "^2.45.4",
     "@tanstack/react-query": "^5.59.19",
     "next": "14.2.10",
