--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "postbuild": "node scripts/post-export-fix.mjs",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "node --require ./tests/setup-ts.js --test"
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "file:vendor/auth-helpers-nextjs",
@@ -16,7 +17,8 @@
     "next": "14.2.10",
     "postgres": "^3.4.7",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "zod": "file:vendor/zod"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
