--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.4",
+    "@auth/core": "^0.41.0",
+    "@neondatabase/serverless": "^1.0.2",
+    "@supabase/supabase-js": "^2.88.0",
     "@tanstack/react-query": "^5.59.19",
+    "bcryptjs": "^3.0.3",
     "next": "14.2.10",
+    "next-auth": "^5.0.0-beta.30",
     "postgres": "^3.4.7",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.16.10",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
@@ -27,6 +32,7 @@
     "eslint-config-next": "14.2.10",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
+    "tsx": "^4.21.0",
     "typescript": "^5.6.3"
   },
   "engines": {
