--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "test": "node --require ./tests/setup-ts.js --test"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
     "@supabase/auth-helpers-nextjs": "file:vendor/auth-helpers-nextjs",
     "@supabase/supabase-js": "^2.45.4",
     "@tanstack/react-query": "^5.59.19",
     "next": "14.2.10",
+    "next-auth": "^5.0.0-beta.30",
     "postgres": "^3.4.7",
     "react": "18.3.1",
     "react-dom": "18.3.1",
