--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/auth-helpers-nextjs": "file:vendor/auth-helpers-nextjs",
     "@supabase/supabase-js": "^2.45.4",
     "@tanstack/react-query": "^5.59.19",
+    "bcryptjs": "^3.0.3",
     "next": "14.2.10",
     "next-auth": "^5.0.0-beta.30",
     "postgres": "^3.4.7",
