fix: exclude scripts folder from TypeScript build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,11 @@
         "./src/*"
       ]
     },
-    "types": ["node", "react", "react-dom"],
+    "types": [
+      "node",
+      "react",
+      "react-dom"
+    ],
     "forceConsistentCasingInFileNames": true
   },
   "include": [
@@ -39,6 +43,7 @@
     "**/*.mts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "scripts"
   ]
 }
